--- a/site.yml
+++ b/site.yml
@@ -11,6 +11,23 @@
       update_cache: yes
     when: ansible_distribution == "Ubuntu"
 
+- hosts: workstations
+  bceome: true
+  tasks:
+
+  - name: install unzip from command line
+    package:
+      name: unzip
+
+  - name: install terraform
+    unarchive:
+      src: https://releases.hashicorp.com/terraform/1.10.1/terraform_1.10.1_linux_amd64.zip
+      desc: /usr/local/bin
+      remote_src: yes
+      mode: 0755
+      owner: root
+      group: root
+
 - hosts: web_servers
   become: true
   tasks:
@@ -19,5 +36,14 @@
     tags: apache,apache2,Ubuntu
     package: 
       name: "{{ apache_package }}"
+
+  - name: copy default html file for site
+    copy:
+      src: default_site.html
+      dest: /var/www/html/index2.html
+      owner: root
+      group: root
+      mode: 0644
+
 
     
